--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "project",
-  "version": "0.0.0",
+  "name": "springup-web",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@ng-select/ng-select": "^9.1.0",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.1",
+    "keycloak-angular": "^12.1.0",
+    "keycloak-js": "^19.0.1",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
