--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,8 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
+.angular
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
